src/test/deca/syntax/invalid/parser/with_object/method_list_params_ident2.deca
class A { a a (a 0a){} }